--- a/app/shared/components/main/main.module.css
+++ b/app/shared/components/main/main.module.css
@@ -3,7 +3,9 @@
   flex-direction: column; /* Stack children vertically */
   height: auto; /* Full height of the viewport */
   max-width: 1920px;
+  width: 100%;
   margin: 0 auto;
+  overflow-x: hidden; /* Prevent horizontal overflow */
 }
 
 
@@ -31,13 +33,13 @@
   width: 400px;
   height: 84px;
   font-size: 1.125rem;
-  margin-bottom: 1.5rem; 
-  margin-right: 33rem;
+  margin-bottom: 1.5rem;
+  max-width: 90%;
 }
 
 .ctaButton {
   display: flex;
-  justify-content: center; 
+  justify-content: center;
   align-items: center;
   width: 282px;
   height: 44px; /* Height of the button */
@@ -49,7 +51,6 @@
   border: none; /* No border */
   cursor: pointer; /* Pointer on hover */
   transition: background-color 0.3s ease; /* Smooth transition */
-  margin-right: 33rem;
   gap: 8px;
 }
 
@@ -349,16 +350,15 @@
   .subheading {
     width: 350px;
     font-size: 1.2rem;
-    margin-right: 25rem;
+    max-width: 90%;
   }
 
   .ctaButton {
     width: 250px;
-    height: 44px; 
-    padding: 0; 
-    border-radius: 50px; 
-    font-size: 1.2rem; 
-    margin-right: 25rem;
+    height: 44px;
+    padding: 0;
+    border-radius: 50px;
+    font-size: 1.2rem;
   }
 
 
@@ -375,16 +375,15 @@
   .subheading {
     width: 350px;
     font-size: 1.2rem;
-    margin-right: 17rem;
+    max-width: 90%;
   }
 
   .ctaButton {
     width: 250px;
-    height: 44px; 
-    padding: 0; 
-    border-radius: 50px; 
-    font-size: 1.2rem; 
-    margin-right: 17rem;
+    height: 44px;
+    padding: 0;
+    border-radius: 50px;
+    font-size: 1.2rem;
   }
 }
 
